Add better logging and error handling for s5cmd process execution